<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/teal_200">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:padding="15dp">
            <TextView
                android:id="@+id/tvFilters"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/tv_filters_label"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <View
                android:id="@+id/space"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="@color/purple_700"
                app:layout_constraintEnd_toEndOf="@+id/tvFilters"
                app:layout_constraintStart_toStartOf="@+id/tvFilters"
                app:layout_constraintTop_toBottomOf="@+id/tvFilters" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColorHint="@color/white"
                android:foregroundTint="@color/white"
                app:endIconTint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                app:layout_constraintEnd_toEndOf="@+id/space"
                app:layout_constraintStart_toStartOf="@+id/space"
                app:layout_constraintTop_toBottomOf="@+id/space">

                <AutoCompleteTextView
                    android:id="@+id/aedProducts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:editable="false"
                    android:backgroundTint="@color/purple_500"
                    android:hint="@string/products_label" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/white"
                app:endIconTint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                <AutoCompleteTextView
                    android:id="@+id/aedStates"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:editable="false"
                    android:backgroundTint="@color/purple_500"
                    android:hint="@string/states_label" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="@color/white"
                app:endIconTint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                <AutoCompleteTextView
                    android:id="@+id/aedCities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/purple_500"
                    android:editable="false"
                    android:hint="@string/cities_label"
                    android:textColor="@color/white" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/applyFilter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Apply"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="@+id/textInputLayout3"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

        </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>